force-app/main/default/objects/Case/fields/ES_Program__c.field-meta.xml
<CustomField>
    <fullName>ES_Program__c</fullName>
    <formula>ES_Project__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Program</label>
    <type>Text</type>
</CustomField>