force-app/main/default/objects/Case/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ES Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Cases (Related Inspection)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>