force-app/main/default/objects/Case/recordTypes/Inspection.recordType-meta.xml
<RecordType>
    <fullName>Inspection</fullName>
    <active>true</active>
    <businessProcess>ES</businessProcess>
    <description>Inspection Issues &amp; Risks related</description>
    <label>ES Inspection</label>
</RecordType>